add more heif related snippets

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -1249,6 +1249,8 @@ fields:
     webP: WebP
     tiff: Tiff
     avif: AVIF
+    heif: HEIF
+    heic: HEIF
     mapping: Mapping
     basemaps: Basemaps
     basemaps_raster: Raster
