add basic theming slide
this sets the theming for the project though, not the user

--- a/app/src/lang/translations/en-US.yaml
+++ b/app/src/lang/translations/en-US.yaml
@@ -2373,6 +2373,10 @@ onboarding:
     db_admin: Database Administrator
     data_scientist: Data Scientist
     nontechnical: Non-Technical User
+  theming:
+    title: Let's setup your theme
+    text: |
+      The Directus Theming Engine contains two customizable themes - Light Theme and Dark Theme. Both themes can be updated for all users (in the Settings Module), or for specific users (in the Users Module).
   loading:
     title: Setting up your project...
     text: |
